tests/type-errors/expr_method_asset_addupdate_no_init_value.arl
archetype expr_method_asset_addupdate_no_init_value

asset my_asset identified by id {
  id : string;
  value : int;
} initialized by {
  {"id0"; 0};
  {"id1"; 1};
  {"id2"; 2}
}

variable res : int = 0

action exec () {
  effect {
    my_asset.addupdate("id2", {value += 3})
  }
}
